Updated pom and PaymentView test file